--- a/dataanalyser/Makefile
+++ b/dataanalyser/Makefile
@@ -1,2 +1,4 @@
+BINARY_NAME=./_build/data_analyser
+
 all:
-	g++ DataAnalyser.cpp FastExpSketch.cpp -O3 -Wall -pedantic -o ./_build/data_analyser
+	g++ DataAnalyser.cpp FastExpSketch.cpp -O3 -Wall -pedantic -o ${BINARY_NAME}-linux
