--- a/datacollector/docker/Dockerfile
+++ b/datacollector/docker/Dockerfile
@@ -1,4 +1,3 @@
-#FROM amd64/alpine:3.16
 FROM ubuntu
 
 ARG VERSION
@@ -7,3 +6,5 @@ ENV VERSION="$VERSION"
 RUN mkdir -p /spotify-insights/datacollector
 WORKDIR /spotify-insights/datacollector
 COPY _build/datacollector-${VERSION} datacollector-${VERSION}
+RUN ln -s datacollector-${VERSION} datacollector
+CMD [ "/spotify-insights/datacollector/datacollector" ]
